--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <groupId>org.example</groupId>
     <artifactId>website-eye-v2</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <properties> <!-- Java Version -->
         <maven.compiler.source>17</maven.compiler.source>
